--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -1,3 +1,12 @@
+@import "../../../node_modules/bootstrap/scss/_functions.scss";
+@import "../../../node_modules/bootstrap/scss/_variables.scss";
+@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
+
+
+
+
+
+
 
 
 
