Add scss config

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -1,10 +1,12 @@
+@import "../scss/base/reset";
 @import "../../../node_modules/bootstrap/scss/_functions.scss";
 @import "../../../node_modules/bootstrap/scss/_variables.scss";
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
 
 
-
-
+.show-border{
+    border: 1px solid #000;
+}
 
 
 
