--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -1,7 +1,14 @@
-@import "../scss/base/reset";
+
 @import "../../../node_modules/bootstrap/scss/_functions.scss";
 @import "../../../node_modules/bootstrap/scss/_variables.scss";
 @import "../../../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../scss/base/reset";
+
+
+@import "../scss/base/base";
+@import "../scss/layout/header";
+@import "../scss/component/jumbotron";
+@import "../scss/component/button";
 
 
 .show-border{
