Add responsive jumbotron.

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -6,6 +6,8 @@
 
 
 @import "../scss/base/base";
+@import "../scss/utils/mixins";
+@import "../scss/utils/spacing";
 @import "../scss/layout/header";
 @import "../scss/component/jumbotron";
 @import "../scss/component/button";
