Add responsive nav bar

--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -9,6 +9,7 @@
 @import "../scss/utils/mixins";
 @import "../scss/utils/spacing";
 @import "../scss/layout/header";
+@import "../scss//layout/nav";
 @import "../scss/component/jumbotron";
 @import "../scss/component/button";
 
