--- a/app/assets/templates/basic_layout.njk
+++ b/app/assets/templates/basic_layout.njk
@@ -4,11 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
+/>
+
     <link rel="stylesheet" href="{{css_directory}}style.css">
     <title>Document</title>
 </head>
 <body>
     {% block content %} {% endblock %}
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
     <script src="{{javascript_directory}}all.js"></script>
+    <script>
+    var swiper = new Swiper(".swiper-container", {});
+    </script>
+      
 </body>
 </html>
