--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -15,6 +15,8 @@ a{
     cursor: pointer;
     font-size: 1rem;
     line-height: 1.5rem;
+    word-wrap: normal;
+
 }
 
 h1,h2,h3,h4,h5,h6,p,ul,ol,dl,li{
