--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -10,6 +10,7 @@
 @import "../scss/utils/spacing";
 @import "../scss/layout/header";
 @import "../scss//layout/nav";
+@import "../scss//layout/footer";
 @import "../scss/component/jumbotron";
 @import "../scss/component/button";
 
