--- a/app/assets/scss/component/_button.scss
+++ b/app/assets/scss/component/_button.scss
@@ -9,3 +9,11 @@
         background-color: rgba(255,255,255,0.1);
     }
 }
+
+.btn-form{
+    font-size: 1rem;
+    line-height: 1.5rem;
+    padding:0.75rem 3.25rem;
+    
+
+}
