Fixed footer and jumbotron

--- a/app/assets/templates/partials/footer.njk
+++ b/app/assets/templates/partials/footer.njk
@@ -2,9 +2,9 @@
     <div class="jumbotron-footer position-relative">
         <div class="footer-container container container-xxl">
             <div class="row">
-                <div class="col-3 position-absolute top-53 show-border">
-                    <h3 class="fs-3 text-white lh-base">想收到最新消息嗎？<br> 快訂閱我們！</h3>
-                        <div class="input-group mb-3">
+                <div class="col-sm-4 col-md-3 position-absolute top-53 show-border">
+                    <h3 class="fs-3 text-white lh-base mb-6 mb-md-3">想收到最新消息嗎？<br> 快訂閱我們！</h3>
+                    <div class="input-group my-sm-6 my-md-3">
                         <input type="text" class="form-control" placeholder="輸入您的電子信箱" aria-label="輸入您的電子信箱"    aria-describedby="button-addon2">
                         <button class="btn btn-warning btn-form" type="button" id="button-addon2">訂閱</button>
                     </div>
@@ -12,10 +12,10 @@
             </div>
         </div>
     </div>
-    <div class="footer-slogan py-7 d-flex justify-content-between container container-xxl">
-        <div class="slogan d-flex  flex-column  flex-md-row align-items-center ">
-            <h5 class="fs-5 text-dark me-4">EXHIBINECTION</h5>
-            <p class="text-dark">© 2020. All Rights Reserved.</p>
+    <div class="footer-slogan py-4 py-md-7 d-flex justify-content-between container container-xxl">
+        <div class="slogan d-flex flex-column  flex-md-row align-items-center justify-content-start">
+            <h5 class="fs-5 text-start text-dark me-md-4">EXHIBINECTION</h5>
+            <p class="text-dark text-start">© 2020. All Rights Reserved.</p>
         </div>
         <ul class="sign d-flex flex-row">
             <li><a href="#" class="lh-base align-items-end text-text-basic me-8 d-none d-md-block">Sign in</a></li>
