Add horizontal cards

--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -22,3 +22,9 @@ a{
 h1,h2,h3,h4,h5,h6,p,ul,ol,dl,li{
     margin-bottom: 0;
 }
+
+img{
+    object-fit: cover;
+    width: 100%;
+    height: auto;
+}
