--- a/app/assets/templates/partials/footer.njk
+++ b/app/assets/templates/partials/footer.njk
@@ -1,6 +1,6 @@
 <footer>
     <div class="jumbotron-footer position-relative">
-        <div class="footer-container container container-xxl">
+        <div class="footer-container container container-lg">
             <div class="row">
                 <div class="col-sm-4 col-md-3 position-absolute top-53 show-border">
                     <h3 class="fs-3 text-white lh-base mb-6 mb-md-3">想收到最新消息嗎？<br> 快訂閱我們！</h3>
@@ -12,7 +12,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-slogan py-4 py-md-7 d-flex justify-content-between container container-xxl">
+    <div class="footer-slogan py-4 py-md-7 d-flex justify-content-between container container-lg">
         <div class="slogan d-flex flex-column  flex-md-row align-items-center justify-content-start">
             <h5 class="fs-5 text-start text-dark me-md-4">EXHIBINECTION</h5>
             <p class="text-dark text-start">© 2020. All Rights Reserved.</p>
