--- a/app/assets/templates/partials/header.njk
+++ b/app/assets/templates/partials/header.njk
@@ -1,5 +1,5 @@
 <header class="border-bottom border-text-basic">
-    <div class="container container-xxl d-flex justify-content-center position-relative">
+    <div class="container container-lg d-flex justify-content-center position-relative">
         <h1 class="fs-5 text-secondary">EXHIBINECTION</h1>
         <ul class="d-flex position-absolute end-0">
             <li><a href="#" class="lh-base align-items-end text-text-basic me-8 d-none d-lg-block">Sign in</a></li>
