--- a/app/assets/templates/basic_layout.njk
+++ b/app/assets/templates/basic_layout.njk
@@ -18,6 +18,11 @@
     <script src="{{javascript_directory}}all.js"></script>
     <script>
     var swiper = new Swiper(".swiper-container", {});
+    var swiper_card = new Swiper(".swiper-card", {
+        slidesPerView: 3,
+        spaceBetween: 0,
+        freeMode: true,
+    });
     </script>
       
 </body>
