--- a/app/assets/templates/partials/footer.njk
+++ b/app/assets/templates/partials/footer.njk
@@ -1,4 +1,4 @@
-<footer>
+<footer class="mt-md-12">
     <div class="jumbotron-footer position-relative">
         <div class="footer-container container container-lg">
             <div class="row">
