--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -25,6 +25,6 @@ h1,h2,h3,h4,h5,h6,p,ul,ol,dl,li{
 
 img{
     object-fit: cover;
-    width: 100%;
-    height: auto;
+    width: 360px;
+    height: 360px;
 }
