--- a/app/assets/scss/component/_card.scss
+++ b/app/assets/scss/component/_card.scss
@@ -2,6 +2,20 @@
     border:none !important;
 }
 
+
+.card-title{
+    font-weight: bold;
+    margin-bottom:map-get($spacers, 1);
+    font-size: $h6-font-size; 
+    line-height: 1.5* $h6-font-size;
+}     
+.card-value{
+    margin-bottom:map-get($spacers, 2);
+    margin-bottom: 0.5rem; 
+    font-size: $h6-font-size; 
+    line-height: 1.5* $h6-font-size;
+}
+
 .card-horizontal-body{
   padding:40px 0 40px 60px;
   display: flex;
@@ -9,17 +23,6 @@
   height: 100%;
     .card-content{
         position: relative;
-        font-size: $h6-font-size; 
-        line-height: 1.5* $h6-font-size;
-        .card-horizontal-title{
-            font-weight: bold;
-            margin-bottom:map-get($spacers, 1);
-        }     
-        .card-horizontal-value{
-            margin-bottom:map-get($spacers, 2);
-            margin-bottom: 0.5rem; 
-        }
-
         .card-buttons{
             position: absolute;
             bottom: 0;
@@ -45,4 +48,22 @@
             }
         }
     }
+}
+
+.gallery-card{
+    width: 350px;
+    background-color: $transparent;
+
+    &-body{
+        text-align: left;
+    }
+
+    &-title{
+        margin-top: 0.25rem !important;
+    }
+
+    &-value{
+        margin-top: 0.25rem !important;
+    }
+
 }
