--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -17,6 +17,7 @@
 @import "../scss/component/jumbotron";
 @import "../scss/component/card";
 @import "../scss/component/button";
+@import "../scss/pages/streams-review";
 
 
 .show-border{
