--- a/app/assets/scss/component/_image.scss
+++ b/app/assets/scss/component/_image.scss
@@ -11,7 +11,10 @@
     height: 256px;
     width: 540px;
 }
-
+.img-head{
+    height: 128px;
+    width: 128px;
+}
 .img-cart{
     height: 120px;
     width: 120px;
