--- a/app/assets/templates/partials/nav.njk
+++ b/app/assets/templates/partials/nav.njk
@@ -2,7 +2,7 @@
             <ul class="d-flex justify-content-center">
                 <li><a href="#" class="text-text-basic px-4 mx-3">音樂</a></li>
                 <li><a href="#" class="text-text-basic px-4 mx-3">戲劇</a></li>
-                <li><a href="#" class="text-text-basic px-4 mx-3">設計</a></li>
+                <li><a href="design.html" class="text-text-basic px-4 mx-3">設計</a></li>
                 <li><a href="#" class="text-text-basic px-4 mx-3">藝術</a></li>
                 <li><a href="#" class="text-text-basic px-4 mx-3">美食</a></li>
                 <li><a href="#" class="text-text-basic px-4 mx-3">旅遊</a></li>
@@ -17,7 +17,7 @@
                 <div class="swiper-slide">
                     <a href="#" class="text-text-basic px-4 mx-3">音樂</a>
                     <a href="#" class="text-text-basic px-4 mx-3">戲劇</a>
-                    <a href="#" class="text-text-basic px-4 mx-3">設計</a>
+                    <a href="design.html" class="text-text-basic px-4 mx-3">設計</a>
                     <a href="#" class="text-text-basic px-4 mx-3">藝術</a>
                 </div>
                 <div class="swiper-slide">
