--- a/app/assets/templates/partials/footer.njk
+++ b/app/assets/templates/partials/footer.njk
@@ -1,16 +1,22 @@
 <footer class="mt-md-12">
-    <div class="jumbotron-footer position-relative">
-        <div class="footer-container container container-lg">
+    <div class="jumbotron-footer">
+        <div class="footer-content  d-flex align-items-end">
+        <div class="footer-container container container-lg flex align-items-end">
             <div class="row">
-                <div class="col-sm-4 col-md-3 position-absolute top-53 show-border">
-                    <h3 class="fs-3 text-white lh-base mb-6 mb-md-3">想收到最新消息嗎？<br> 快訂閱我們！</h3>
-                    <div class="input-group my-sm-6 my-md-3">
+                <div class="col-sm-4 col-md-3 ">
+                    <h3 class="fs-3 text-white lh-base mb-6 mb-md-2">想收到最新消息嗎？<br> 快訂閱我們！</h3>
+                </div>
+            </div>
+            <div class="flex-md-row">
+                <div class="col-md-4">
+                    <div class="input-group mb-10">
                         <input type="text" class="form-control" placeholder="輸入您的電子信箱" aria-label="輸入您的電子信箱"    aria-describedby="button-addon2">
                         <button class="btn btn-warning btn-form" type="button" id="button-addon2">訂閱</button>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <div class="footer-slogan py-4 py-md-7 d-flex justify-content-between container container-lg">
         <div class="slogan d-flex flex-column  flex-md-row align-items-center justify-content-start">
