--- a/app/assets/scss/base/_base.scss
+++ b/app/assets/scss/base/_base.scss
@@ -5,7 +5,8 @@
 }
 
 body{
-    // padding: 0 1rem 0 1rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
 
 }
 
@@ -18,6 +19,7 @@ a{
     word-wrap: normal;
 
 }
+
 
 h1,h2,h3,h4,h5,h6,p,ul,ol,dl,li{
     margin-bottom: 0;
