--- a/app/assets/scss/component/_image.scss
+++ b/app/assets/scss/component/_image.scss
@@ -24,3 +24,16 @@
     height: 84px;
     width: 160px;
 }
+
+
+
+.img-fit{
+    object-fit:cover;
+    width: 100%;
+    height: 100%;
+}
+
+.img-mobile{
+    height: 345px;
+    width: 100%;
+}
