--- a/app/assets/templates/partials/gallery.njk
+++ b/app/assets/templates/partials/gallery.njk
@@ -1,7 +1,7 @@
  <div class="gallery">
-       <div class="container container-lg mt-md-12">
-           <h1 class="fs-3 fw-bold">猜你也喜歡...</h1>
-            <div class="d-flex swiper swiper-card mt-md-6">
+       <div class="container container-lg mt-6 mt-md-12">
+           <h1 class="fs-3 fw-bolder　mb-2">猜你也喜歡...</h1>
+            <div class="d-flex swiper swiper-card mt-md-6 d-none d-md-block">
                 <div class="swiper-wrapper ms-md-7">
                     <div class="swiper-slide">
                         <div class="card gallery-card">
@@ -43,7 +43,7 @@
                         <div class="card gallery-card">
                             <div class="img-md">
                                 <img src="{{image_directory}}gallery/rene-bohmer-rnXLOEOY75k-unsplash.jpg" 
-                                class="img " alt="覺青">
+                                class="img-fit" alt="覺青">
                              </div>
                             <div class="card-body gallery-card-body">
                                 <p class="card-title gallery-card-title">No.22 線上設計展</p>
@@ -53,5 +53,55 @@
                     </div>
                 </div>
             </div>
-       </div>
+            <div class="d-flex flex-column d-block d-md-none mt-2">
+                    <div class="swiper-slide">
+                        <div class="card gallery-card">
+                            <div class="img-mobile">
+                                <img src="{{image_directory}}gallery/ricardo-gomez-angel-WxpnuLzqZN4-unsplash.jpg" 
+                                class="img-fit" alt="奇怪的積木">
+                             </div>
+                            <div class="card-body gallery-card-body py-2">
+                                <p class="card-title gallery-card-title">No.22 線上設計展</p>
+                                <p class="card-value gallery-card-value">$350</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card gallery-card">
+                            <div class="img-mobile">
+                                <img src="{{image_directory}}gallery/petri-heiskanen-bR9gFJqAnzA-unsplash.jpg" 
+                                class="img-fit" alt="特技表演">
+                             </div>
+                            <div class="card-body gallery-card-body py-2">
+                                <p class="card-title gallery-card-title">No.22 線上設計展</p>
+                                <p class="card-value gallery-card-value">$350</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card gallery-card">
+                            <div class="img-mobile">
+                                <img src="{{image_directory}}gallery/museums-victoria-kiDwVL_5ZBY-unsplash .jpg" 
+                                class="img-fit " alt="老頭">
+                             </div>
+                            <div class="card-body gallery-card-body py-2">
+                                <p class="card-title gallery-card-title">No.22 線上設計展</p>
+                                <p class="card-value gallery-card-value">$350</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card gallery-card">
+                            <div class="img-mobile">
+                                <img src="{{image_directory}}gallery/rene-bohmer-rnXLOEOY75k-unsplash.jpg" 
+                                class="img-fit " alt="覺青">
+                             </div>
+                            <div class="card-body gallery-card-body py-2">
+                                <p class="card-title gallery-card-title">No.22 線上設計展</p>
+                                <p class="card-value gallery-card-value">$350</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
    </div>
