--- a/app/assets/scss/utils/_spacing.scss
+++ b/app/assets/scss/utils/_spacing.scss
@@ -1,5 +1,14 @@
+
 @include media-mobile{
     .top-sm-53{
         top:53% !important;
+    }
+
+    .container-sm-full{
+        max-width: 100%;
+        padding-right: 0 !important;
+        padding-left: 0 !important;
+        margin-right: 0 !important;
+        padding-left: 0 !important;
     }
 }
