--- a/app/assets/templates/partials/gallery.njk
+++ b/app/assets/templates/partials/gallery.njk
@@ -1,6 +1,7 @@
  <div class="gallery">
        <div class="container container-lg mt-6 mt-md-12">
-           <h1 class="fs-3 fw-bolder　mb-2">猜你也喜歡...</h1>
+          <!-- <h1 class="fs-3 fw-bolder　mb-2">猜你也喜歡...</h1>-->
+            <h1 class="big-title">猜你也喜歡...</h1>
             <div class="d-flex swiper swiper-card mt-md-6 d-none d-md-block">
                 <div class="swiper-wrapper ms-md-7">
                     <div class="swiper-slide">
