--- a/app/assets/scss/component/_icons.scss
+++ b/app/assets/scss/component/_icons.scss
@@ -1,7 +1,17 @@
-.icon{
-    background-size:contain;
-}
 
 .facebook-icon{
-    background-image: url("../../images/icon/facebook-24px.svg");
+    padding-right: 0.5rem;
+}
+
+.count-icon{
+    display: block;
+    font-size: 0.725rem;
+    line-height: 1rem;
+    text-align: center;
+    background-color:$warning;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    top:-0.25rem;
+    right:-0.25rem !important;
 }
