--- a/app/assets/scss/layout/_header.scss
+++ b/app/assets/scss/layout/_header.scss
@@ -10,8 +10,8 @@ h5{
     line-height:1.5rem;
 }
 span.hamberger{
-    background: url(../../images/icon/confirmation_number_black_24dp.svg);
-    background-repeat: no-repeat;
+    // background: url(../../images/icon/confirmation_number_black_24dp.svg);
+    // background-repeat: no-repeat;
     width: 1.5rem;
     height: 1.5rem;
     display: block;
