--- a/app/assets/scss/layout/_title.scss
+++ b/app/assets/scss/layout/_title.scss
@@ -1,3 +1,9 @@
-.section-title{
-    
+.big-title{
+    font-size: 2rem;
+    font-weight: bold;
+    line-height: 2rem;
+    margin-bottom: 1rem;
+    @include  media-mobile{
+        margin-bottom: 1rem;
+    }
 }
