Add _variables.scss for code reviewing.

--- a/app/assets/templates/partials/jumbotron.njk
+++ b/app/assets/templates/partials/jumbotron.njk
@@ -2,7 +2,7 @@
     <div class="container container-lg h-100">
         <div class="row align-items-end align-items-md-center h-100">
             <!-- <div class="col-md-4 offset-md-1 position-absolute top-33 top-sm-53"> -->
-                <div class="col-md-4 offset-md-1 mb-13">
+                <div class="col-md-4 offset-md-1 mb-13 mb-md-0">
                     <h3 class="fs-3 lh-base text-white">台北當代藝術展</h3>
                     <h6 class="fs-6 lh-base text-white mb-4">01 JUN - 31 OCT</h6>
                     <div class="buttons d-flex justify-content-between justify-content-sm-start">
