Edit the url of image.

--- a/app/assets/pages/design.njk
+++ b/app/assets/pages/design.njk
@@ -13,7 +13,7 @@
                         <p class="text-white mb-10 mb-md-0">一年一度的台味設計展由經濟部工業局主辦、台灣創意設計中心執行，每年，針對在地生活、文化及產業發展特    色，運用設計思考詮釋新時代的意涵，並以展覽呈現在地設計。</p>
                     </div>
                     <div class="col-md-5 mt-10 mt-md-13 mb-4 mb-md-12">
-                        <img src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fit" alt="撿   錢">
+                        <img src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fit" alt="撿錢">
                     </div>
                     <div class="col-md-1 text-white pt-md-13 pb-md-12 d-flex align-items-end">
                         <sapn class="d-none d-md-block lh-base  fw-bold">01<br>JUN<br> | <br>31<br> OCT<br></sapn>
@@ -30,7 +30,7 @@
                     <p class="text-secondary mb-10 mb-md-0">這是一個專屬於設計系畢業生的展覽，沒有華麗的名號、沒有浮誇的獎賞。讓我們用作品與理念，去碰撞真實世界裡的各種問題，創造更多美好的人事物。讓這個地球、這個世界變成每一個人心目中的理想鄉。</p>
                 </div>
                 <div class="col-md-5 mt-10 mt-md-13 mb-4 mb-md-12">
-                    <img src="{{image_directory}}exhibitions/alina-grubnyak-R84Oy89aNKs-unsplash.jpg" class="img-fit" alt="撿錢">
+                    <img src="{{image_directory}}exhibitions/exhibitions/moralis-tsai-8xsktFRw28I-unsplash.jpg" class="img-fit" alt="綠光">
                 </div>
                 <div class="col-md-1 text-secondary pt-md-13 pb-md-12 d-flex align-items-end">
                     <sapn class="d-none d-md-block lh-base fw-bold">01<br>JUN<br> | <br>31<br> OCT<br></sapn>
